<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/selectTimeTable"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/import_" />
        <item
            android:id="@+id/selectCourses"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/allCourses" />

        <item
            android:id="@+id/setReminder"
            android:icon="@drawable/ic_access_alarm_black_24dp"
            android:title="@string/Reminder" />

        <item
            android:id="@+id/nav_alarm_toggle"
            android:icon="@drawable/ic_alarm"
            android:title="@string/repeat_alarms"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
    </group>
</menu>